@@ -1,6 +1,8 @@
 Pygame-ctypes 0.09
 ------------------
  - pygame.mixer.Channel.get/set_endevent fixed
+ - pygame.mixer endevent callback fixed
+ - pygame.draw.circle correct box for given radius
 
 Pygame-ctypes 0.08
 ------------------
